--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "ajspeller",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "nodemon": "^1.18.10"
   }
 }
