Setup eslint, debug, nodemon, package.json

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A node.js RESTful API Tutorial Project (Build a simple shop API)",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "set DEBUG=app,app:* & nodemon server.js"
   },
   "keywords": [
     "node",
@@ -15,10 +16,23 @@
   "author": "ajspeller",
   "license": "ISC",
   "dependencies": {
+    "debug": "^4.1.1",
     "express": "^4.16.4",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
+    "eslint": "^5.15.3",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.16.0",
     "nodemon": "^1.18.10"
+  },
+  "nodemonConfig": {
+    "restartable": "rs",
+    "ignore": ["node_modules/**/node_modules"],
+    "delay": 2500,
+    "env": {
+      "NODE_ENV": "development",
+      "PORT": 4000
+    }
   }
 }
