--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "author": "ajspeller",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "debug": "^4.1.1",
     "express": "^4.16.4",
+    "mongoose": "^5.4.19",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
@@ -28,11 +30,9 @@
   },
   "nodemonConfig": {
     "restartable": "rs",
-    "ignore": ["node_modules/**/node_modules"],
-    "delay": 2500,
-    "env": {
-      "NODE_ENV": "development",
-      "PORT": 4000
-    }
+    "ignore": [
+      "node_modules/**/node_modules"
+    ],
+    "delay": 2500
   }
 }
